--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,36 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.qs.framework</groupId>
-    <artifactId>qs-framework-base-starter</artifactId>
+    <name>base</name>
+    <groupId>com.quinsicstudio.framework</groupId>
+    <artifactId>qs-${project.name}</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
+        <repo.name>qs-framework-${project.name}</repo.name>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Github quinsicstudio Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/quinsicstudio/${repo.name}</url>
+        </repository>
+    </distributionManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.12.5</version>
+        </dependency>
+    </dependencies>
 </project>
