--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <groupId>com.quinsicstudio.framework</groupId>
     <artifactId>qs-${project.name}</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <repo.name>qs-framework-${project.name}</repo.name>
